# suna

./: .dockerignore  .env.example  .gitignore  .gitmodules  .npmrc  .npmrc.release  .opencode  .release-state.json  AGENT_START_REFACTORING.md  ARCHITECTURE_REFACTOR_PLAN.md  CI_CD_SETUP_COMPLETE.md  CLAUDE.md  CLEANUP_COMPLETE.md  CLEANUP_PLAN.md  CONTRIBUTING.md  DEPLOYMENT_REFACTOR_PLAN.md  FILE_UPLOAD_COMPARISON.md  FILE_UPLOAD_GUIDE.md  FILE_UPLOAD_IMPLEMENTATION.md  FINAL_SUMMARY.md  GDPR_ACCOUNT_DELETION_SUMMARY.md  GITHUB_SECRETS_CONFIGURED.md  IAP_PRODUCTION_READINESS_AUDIT.md  LICENSE  MANIFESTO.md  PLAN-kortix-channels.md  PROXY-REFACTOR-PLAN.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_FIXES.md  credit-schema-migration_plan.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yaml  docker-compose.yml  mem-hook-flow.excalidraw  nx.json  opencode.jsonc  package-lock.json  package.json  (+9 more)
backend/: .env.example  .gitignore  ACCOUNT_DELETION_GDPR.md  Dockerfile  MEMORY_ANALYSIS.md  Makefile  README.md  SCALABILITY.md  TESTING_STATUS.md  TEST_HARNESS_RESTART_AND_RUN.md  WORKER_ARCHITECTURE_ANALYSIS.md  YEARLY_PLAN_E2E_TESTING.md  api.py  check_indexes.sql  check_wal_health.py  docker-compose.yml  inspect_novu_to.py  inspect_novu_to1.py  inspect_novu_to_detailed.py  inspect_novu_to_help.py  inspect_novu_to_value.py  inspect_novu_types.py  pyproject.toml  run_agent_background.py  run_api.sh  run_stream_worker.py  run_worker.py  sentry.py  test_direct.py  test_harness_local.sh  test_llm.py  test_llm_concurrency.py  thread_53988aa5_messages.json  thread_686ffbed_messages.json  worker_health.py
backend/auth/: api.py
backend/core/: __init__.py  account_deletion.py  agent_crud.py  agent_json.py  agent_loader.py  agent_runs.py  agent_service.py  agent_setup.py  agent_tools.py  api.py  api_sanitized.py  apify_approvals_api.py  auth.py  config_helper.py  core_utils.py  credits.py  export_api.py  feedback.py  file_uploads_api.py  guest_session.py  limits_api.py  run.py  runtime_cache.py  streaming_context.py  suna_config.py  test.json  thread_init_service.py  threads.py  tool_output_streaming_context.py  user_roles_api.py  vapi_config.py  vapi_webhooks.py
backend/core/admin/: admin_api.py  analytics_admin_api.py  billing_admin_api.py  feedback_admin_api.py  feedback_repo.py  notification_admin_api.py  repo.py  sandbox_pool_admin_api.py  stateless_admin_api.py  stress_test_admin_api.py  system_status_admin_api.py
backend/core/agentpress/: context_manager.py  error_processor.py  mcp_registry.py  native_tool_parser.py  processor_config.py  prompt_caching.py  response_processor.py  thread_manager.py  tool.py  tool_registry.py  xml_tool_parser.py
backend/core/agents/: __init__.py  agent_crud.py  agent_json.py  agent_loader.py  agent_service.py  agent_setup.py  agent_tools.py  api.py  config.py  executor.py  repo.py  runs.py
backend/core/ai_models/: __init__.py  ai_models.py  manager.py  models.py  (+1 more)
backend/docs/: ecs_autoscaling.md  redis_connection_management.md  redis_limits_rationale.md  redis_pool_sizing.md  redis_refactoring_summary.md  redis_simple_explanation.md
backend/evals/: README.md  __init__.py  agent_eval.py  datasets.py  eval_simple.py  runner.py  scorers.py  test_cases.json  test_quick.py  test_simple.py
backend/scripts/: archive_pool_sandboxes.py  backfill_thread_embeddings.py  cleanup_zombie_runs.py  create_sandbox_pool.py  dump_thread_messages.py
backend/supabase/: CHECK_INDEXES.sql  DIAGNOSE_SLOW_QUERIES.sql  RUN_VIA_PSQL_index_optimisations.sql  RUN_VIA_PSQL_is_omitted_index.sql  RUN_VIA_PSQL_optimise_index.sql  RUN_VIA_PSQL_optimize_limits_queries.sql  RUN_VIA_PSQL_rls_policies.sql  WEBHOOK_SETUP.md  config.toml  email-template.html
backend/tests/: README.md  TEST_CASES.md  __init__.py  config.py  conftest.py  requirements-e2e.txt  sandbox_resolver_test.py  sandbox_timing_test.py
(+5776 files in other folders)
