[project]
name = "scripts"
version = "0.1.0"
description = "Presentation-gen helper scripts (validate, PDF export, PPTX export)"
requires-python = ">=3.12"
dependencies = [
    "pillow>=12.1.0",
    "playwright>=1.58.0; sys_platform == 'darwin'",
    "pypdf2>=3.0.1",
    "python-pptx>=1.0.2",
]

[tool.uv]
# Ensure uv resolves for both macOS and Linux platforms
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]
